# claude-pool

./: .gitignore  AGENTS.md  CHANGELOG.md  GOAL-pool-v01.md  GOAL-pool-v02.md  LICENSE  MANIFEST.in  PROTOCOL-TUI.md  PROTOCOL.md  README.md  claude_pool.py  pyproject.toml
.github/workflows/: ci.yml
examples/: chat.py  one_shot.py  one_shot_tui.py  shell.md  sync_usage.py
tests/: fake_claude.py  fake_claude_tui.py  test_backend_parity.py  test_cli.py  test_examples.py  test_fake_claude.py  test_fixtures.py  test_pool.py  test_session.py  test_tui_worker.py  test_worker.py
tests/fixtures/stream_json/: assistant.jsonl  init.jsonl  rate_limit_event.jsonl  result_error.jsonl  result_success.jsonl
