[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-pool"
version = "0.1.0.dev0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
claude-pool = "claude_pool:main"

[tool.setuptools]
py-modules = ["claude_pool"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = [
    "live: hits the real claude CLI and the API",
]
