[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-pool"
version = "0.1.0"
description = "Warm pooled workers for the Claude Code CLI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
claude-pool = "claude_pool:main"

[tool.setuptools]
py-modules = ["claude_pool"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = [
    "live: hits the real claude CLI and the API",
]
